# quadrotor-collision-avoidance

./: CMakeLists.txt  README.md  license.md  package.xml
depth_image_processor/: CMakeLists.txt  package.xml
depth_image_processor/src/: depth_image_processor.cpp  depth_image_processor.h  depth_image_processor_node.cpp  test_depth_image_processor.cpp
launch/: motion_selector.launch  state_estimate_corruptor.launch  trajectory_selector.launch
msg/: Coeff.msg  State.msg
src/: attitude_generator.cpp  attitude_generator.h  depth_image_collision_evaluator.cpp  depth_image_collision_evaluator.h  kd_tree.cpp  kd_tree.h  laser_scan_collision_evaluator.cpp  laser_scan_collision_evaluator.h  motion.cpp  motion.h  motion_library.cpp  motion_library.h  motion_selector.cpp  motion_selector.h  motion_selector_node.cpp  motion_selector_utils.cpp  motion_selector_utils.h  motion_visualizer.cpp  motion_visualizer.h  test_trajectory_selector.cpp  trajectory.cpp  trajectory.h  trajectory_evaluator.cpp  trajectory_evaluator.h  trajectory_library.cpp  trajectory_library.h  trajectory_selector.cpp  trajectory_selector.h  trajectory_selector_node.cpp  trajectory_selector_utils.cpp  trajectory_selector_utils.h  trajectory_visualizer.cpp  trajectory_visualizer.h  value_grid.cpp  value_grid.h  value_grid_evaluator.cpp  value_grid_evaluator.h  value_grid_parser.cpp  value_grid_parser.h
src/devel/: depth_image_processor.cpp  depth_image_processor.h  depth_image_processor_node.cpp  test_depth_image_processor.cpp
src/experimental/: experiment_logger  state_estimate_corruptor_node.cpp
test/: motion_primitives_tests.cpp
